fixed the z-index of the home link in the header

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -13,6 +13,7 @@
   z-index: -9999999999999;
 
   &--desktop {
+    z-index: 99;
     transform: translate(0, -50%);
     display: block;
     left: 4rem;
